lec 14 almost done

--- a/06_Ch_7_Dynamics/084-Invariant_Sub.ipynb
+++ b/06_Ch_7_Dynamics/084-Invariant_Sub.ipynb
@@ -46,14 +46,15 @@
     "\n",
     "By the end of this page, you should know:\n",
     "- the definition and some examples of invariant subspaces\n",
-    "-  "
+    "- the invariant subspaces spanned by the eigen vectors of the matrix\n",
+    "- the different invariant subspaces of a complete matrix and how they relate to the behavior of linear dynamical systems"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Invariant Subspaces: Definition and Examples\n",
+    "## Definition and Examples\n",
     "\n",
     "Invariant subspaces of linear maps play a key role in dynamical systems, linear iterative systems (like Markov chains, which we'll see next lecture), and control systems. Perhaps not surprisingly, the theory of invariant subspaces is built on eigenvalues and eigenvectors.\n",
     "\n",
@@ -101,7 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Representing Transforms using Matrix\n",
+    "## Subspaces Spanned by the Eigen Vectors\n",
     "\n",
     "Since we will focus on cases where $V=\\mathbb{R}^n$, our linear transformations will be defined by matrices $A:\\mathbb{R}^n \\to \\mathbb{R}^n$: $L(\\vv x)=A\\vv x$. In this case, we can characterize 1-d invariant subspaces very clearly.\n",
     "\n",
@@ -141,7 +142,7 @@
     "Some final comments before we see an example:\n",
     "1. If $A$ is a complex real matrix with all real eigenvalues, then the above tells us that all real invariant subspaces are spanned by eigenvectors of $A$.\n",
     "2. If $A$ is real and complete, and has complex conjugate eigenvectors $\\vv v_t = \\vv x \\pm i \\vv y$, then the real invariant subspaces are spanned by $\\text{Re}\\{\\vv v_t\\} = \\vv x$ and $\\text{Im}\\{\\vv v_t\\} = \\vv y$ using a similar argument as to the one we used to find real solutions to $ \\dot{\\vv x} = A\\vv x$ when $A$ had complex conjugate eigenvalues.\n",
-    "\\item A slightly modified argument can be applied to incomplete matrices using Jordan blocks and generalized eigenvectors; we can't cover these in this course, but if you're curious, you can check out ALA 8.6.\n",
+    "3. A slightly modified argument can be applied to incomplete matrices using Jordan blocks and generalized eigenvectors; we can't cover these in this course, but if you're curious, you can check out ALA 8.6.\n",
     ":::"
    ]
   },
@@ -232,18 +233,7 @@
     ":::\n",
     "\n",
     "Remembering that to each eigenvalue/vector pair $(\\lambda_i, \\vv v_i)$ we can associate an eigenfunction $\\vv x_i(t) = e^{\\lambda_i t}\\vv v_i$, we can characterize the following long-term behavior of solutions to $\\dot{\\vv x} = A\\vv x$:\n",
-    "\n",
-    "\\begin{theorem}\n",
-    "Let $A \\in \\mathbb{R}^{n \\times n}$ be a complete matrix with real eigenvalues/eigenvectors. Let $0 \\neq b \\in \\mathbb{R}^n$ and $x(t)$ be a solution to $\\dot{x} = Ax$, $x(0) = b$. Then $b$, and hence $x(t)$, are in:\n",
-    "\n",
-    "\\begin{enumerate}\n",
-    "\\item The stable subspace $S$ if and only if $\\|x(t)\\| \\to 0$ as $t \\to \\infty$\n",
-    "\\item The center subspace $C$ if and only if $x(t) = b$ for all $t \\in \\mathbb{R}$\n",
-    "\\item The unstable subspace $U$ if and only if $\\|x(t)\\| \\to \\infty$ as $t \\to \\infty$\n",
-    "\\end{enumerate}\n",
-    "\\end{theorem}\n",
-    "\n",
-    "This theorem tells us what subsets of $\\mathbb{R}^n$ from which we should pick initial conditions $x(0) = b$ if we want our solutions to decay to zero (stable), not move (center), or blow up to infinity (unstable). This has very important applications in analyzing the behavior of dynamical systems, which we'll explore in the case study salad."
+    "\n"
    ]
   },
   {
@@ -251,212 +241,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\section*{Example}\n",
+    ":::{prf:theorem}\n",
+    ":label: inv_sub_complete_mat_thm\n",
+    "Let $A \\in \\mathbb{R}^{n \\times n}$ be a complete matrix with real eigenvalues/eigenvectors. Let $\\vv 0 \\neq \\vv b \\in \\mathbb{R}^n$ and $\\vv x(t)$ be a solution to $\\dot{\\vv x} = A\\vv x$, $\\vv x(0) = \\vv b$. Then, $\\vv b$, and hence $\\vv x(t)$, are in:\n",
+    "1. The stable subspace $S$ if and only if $\\|\\vv x(t)\\| \\to 0$ as $t \\to \\infty$\n",
+    "2. The center subspace $C$ if and only if $\\vv x(t) = \\vv b$ for all $t \\in \\mathbb{R}$\n",
+    "3. The unstable subspace $U$ if and only if $\\|\\vv x(t)\\| \\to \\infty$ as $t \\to \\infty$\n",
+    ":::\n",
     "\n",
-    "The matrix $A = \\begin{pmatrix} -2 & 1 & 0 \\\\ 1 & -1 & 1 \\\\ 0 & 1 & -2 \\end{pmatrix}$ has eigenvalue/vector pairs\n",
+    "[This theorem](#inv_sub_complete_mat_thm) tells us from what subsets of $\\mathbb{R}^n$ we should pick initial conditions $\\vv x(0) = \\vv b$ if we want our solutions to decay to zero (stable), not move (center), or blow up to infinity (unstable). This has very important applications in analyzing the behavior of dynamical systems, which we'll explore in the case study.\n",
     "\n",
-    "$\\lambda_1 = 0, v_1 = \\begin{pmatrix} 1 \\\\ 2 \\\\ 1 \\end{pmatrix}, \\quad \n",
-    "\\lambda_2 = -2, v_2 = \\begin{pmatrix} -1 \\\\ 0 \\\\ 1 \\end{pmatrix}, \\quad\n",
-    "\\lambda_3 = -3, v_3 = \\begin{pmatrix} 1 \\\\ -1 \\\\ 1 \\end{pmatrix}.$\n",
+    ":::{prf:example}\n",
+    ":label: eg_1\n",
     "\n",
-    "Thus the stable subspace is spanned by $v_2$ and $v_3$, whose nonzero solutions tend to 0 as $t \\to \\infty$ (exponentially quickly), the center subspace is the line spanned by $v_1$, all of whose solutions are constant. In this case, no eigenvalues are positive and hence the unstable subspace is trivial: $U = \\{0\\}$.\n",
+    "The matrix $A = \\begin{bmatrix} -2 & 1 & 0 \\\\ 1 & -1 & 1 \\\\ 0 & 1 & -2 \\end{bmatrix}$ has eigenvalue/vector pairs\n",
     "\n",
-    "\\section*{Inhomogeneous Systems (HLA 10.4)}\n",
+    "$$\n",
+    "\\lambda_1 = 0, \\vv v_1 = \\begin{bmatrix} 1 \\\\ 2 \\\\ 1 \\end{bmatrix}, \\quad \n",
+    "\\lambda_2 = -2, \\vv v_2 = \\begin{bmatrix} -1 \\\\ 0 \\\\ 1 \\end{bmatrix}, \\quad\n",
+    "\\lambda_3 = -3,\\vv  v_3 = \\begin{bmatrix} 1 \\\\ -1 \\\\ 1 \\end{bmatrix}.\n",
+    "$$\n",
     "\n",
-    "Many systems of interest can be modeled by first-order inhomogeneous linear systems of ordinary differential equations of the form:\n",
-    "\n",
-    "\\[\\dot{x} = Ax + f, \\quad (SYS)\\]\n",
-    "\n",
-    "where $A \\in \\mathbb{R}^{n \\times n}$, $x(t) \\in \\mathbb{R}^n$ is the solution, and $f(t) \\in \\mathbb{R}^n$ is a known vector-valued function of $t$ acting as an external force on the system.\n",
-    "\n",
-    "We rely on our work on general linear systems to know that the solution to (SYS) will have the general form given by the superposition:\n",
-    "\n",
-    "\\[x(t) = x^*(t) + z(t),\\]\n",
-    "\n",
-    "where $x^*(t)$ is a particular solution representing a response to the forcing, and $z(t)$ is a solution to the corresponding homogeneous system $\\dot{z} = Az$.\n",
-    "\n",
-    "Since we already know that $z(t) = e^{At}z(0)$, all that's left to work out is the particular solution $x^*(t)$ in response to the forcing $f(t)$.\n",
-    "\n",
-    "We'll start, as before, by recalling the scalar case. To solve $\\dot{x} = ax + f$, we set $x(t) = e^{at}v(t)$, where $v(t)$ is a function to be determined. Differentiating, we compute\n",
-    "\n",
-    "\\[\\dot{x} = ae^{at}v(t) + e^{at}\\dot{v} = ax + e^{at}\\dot{v},\\]\n",
-    "\n",
-    "from which we conclude $x(t)$ satisfies $\\dot{x} = ax + f$ if and only if $\\dot{v} = e^{-ta}f$, i.e., \n",
-    "if and only if $v(t) = \\int_0^t e^{-sa}f(s)ds + v(0)$, where $v(0) = e^{-ta}x(0)$.\n",
-    "\n",
-    "Perhaps unsurprisingly, we can extend this method to the vector setting via the matrix exponential:\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We replace our initial guess with $x(t) = e^{At}v(t)$, where $v(t)$ is a vector-valued function to be determined. We compute the derivative $\\dot{x}$ as:\n",
-    "\n",
-    "\\[\\dot{x} = \\frac{d}{dt}(e^{At}v) = \\frac{d}{dt}(e^{At})v + e^{At}\\frac{dv}{dt} = Ae^{At}v + e^{At}\\dot{v} = Ax + e^{At}\\dot{v}\\]\n",
-    "\n",
-    "From which we conclude that $\\dot{v} = e^{-At}f$. We can integrate both sides to obtain, via the Fundamental Theorem of Calculus, that:\n",
-    "\n",
-    "\\[v(t) = v(0) + \\int_0^t e^{-As}f(s)ds, \\quad \\text{where } v(0) = e^{-tA}x(0)\\]\n",
-    "\n",
-    "This is the last piece we needed to write the general solution to the inhomogeneous initial value problem:\n",
-    "\n",
-    "\\begin{theorem}\n",
-    "The solution to the initial value problem\n",
-    "\\[\\dot{x} = Ax + f, \\quad x(0) = b \\quad \\text{is} \\quad x(t) = e^{(t-0)A}b + \\int_0^t e^{(t-s)A}f(s)ds\\]\n",
-    "\\end{theorem}\n",
-    "\n",
-    "Example: Online notes please transcribe Example 10.3b, but replace u with x for notation, and compute $e^{At}$ via diagonalization. Make sure to highlight $f(t) = \\begin{bmatrix} 0 \\\\ e^t \\end{bmatrix}$\n",
-    "\n",
-    "\\section*{Application to Mechanical Systems (ALA 10.6)}\n",
-    "\n",
-    "We'll start with the simplest possible mechanical system: a single mass connected to a fixed support by a spring. Assuming no external force, Newton's Law of Force = Mass $\\times$ Acceleration results in the following homogeneous second order scalar equation:\n",
-    "\n",
-    "\\[m\\ddot{p} + kp = 0 \\quad (SM), \\quad m > 0 \\text{ mass} \\\\ k > 0 \\text{ spring constant}\\]\n",
-    "\n",
-    "where $p(t) \\in \\mathbb{R}$ is the mass' position over time, $\\dot{p}$ its velocity, and $\\ddot{p}$ its acceleration. Our first order of business is to convert (SM) to a first-order system. To do so, we define the vector $x \\in \\mathbb{R}^2$ as\n",
-    "\n",
-    "\\[x = \\begin{pmatrix} p \\\\ \\dot{p} \\end{pmatrix}, \\quad \\text{i.e., we stack position and velocity.}\\]\n",
-    "\n",
-    "Then $\\dot{x} = \\begin{pmatrix} \\dot{p} \\\\ \\ddot{p} \\end{pmatrix} = \\begin{pmatrix} \\dot{p} \\\\ -\\frac{k}{m}p \\end{pmatrix} = \\begin{pmatrix} 0 & 1 \\\\ -\\frac{k}{m} & 0 \\end{pmatrix} \\begin{pmatrix} p \\\\ \\dot{p} \\end{pmatrix} =: Ax$.\n",
-    "\n",
-    "Thus, the solutions to (SM) can be obtained by reading off the first component of $x(t) = (p(t), \\dot{p}(t))$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The matrix $A$ has imaginary eigenvalues $\\lambda_{\\pm} = \\pm i \\sqrt{\\frac{k}{m}}$ (what physical intuition might have suggested this?), with corresponding eigenvectors\n",
-    "\n",
-    "\\[\n",
-    "v_{\\pm} = \\begin{pmatrix} 1 \\\\ 0 \\end{pmatrix} \\pm i \\begin{pmatrix} 0 \\\\ \\sqrt{\\frac{m}{k}} \\end{pmatrix}\n",
-    "\\]\n",
-    "\n",
-    "Therefore, solutions are weighted sums of\n",
-    "\n",
-    "\\begin{align*}\n",
-    "x_{\\pm}(t) &= e^{\\pm i\\sqrt{\\frac{k}{m}}t} \\left(\\begin{pmatrix} 1 \\\\ 0 \\end{pmatrix} \\pm i \\begin{pmatrix} 0 \\\\ \\sqrt{\\frac{m}{k}} \\end{pmatrix}\\right) \\\\\n",
-    "&= \\begin{pmatrix} \\cos(\\sqrt{\\frac{k}{m}}t) \\\\ \\pm \\sin(\\sqrt{\\frac{k}{m}}t) \\end{pmatrix} \\pm i \\begin{pmatrix} \\sin(\\sqrt{\\frac{k}{m}}t) \\\\ \\cos(\\sqrt{\\frac{k}{m}}t) \\end{pmatrix}\n",
-    "\\end{align*}\n",
-    "\n",
-    "but, really we want real solutions, we write the general solution as\n",
-    "\n",
-    "\\begin{align*}\n",
-    "x(t) &= c_1 \\text{Re}\\{x_+(t)\\} + c_2 \\text{Im}\\{x_+(t)\\} \\\\\n",
-    "&= c_1 \\begin{pmatrix} \\cos(\\sqrt{\\frac{k}{m}}t) \\\\ \\sin(\\sqrt{\\frac{k}{m}}t) \\end{pmatrix} + c_2 \\begin{pmatrix} \\sin(\\sqrt{\\frac{k}{m}}t) \\\\ \\cos(\\sqrt{\\frac{k}{m}}t) \\end{pmatrix} \\\\\n",
-    "&= \\begin{pmatrix} \\cos(\\sqrt{\\frac{k}{m}}t) & \\sin(\\sqrt{\\frac{k}{m}}t) \\\\ -\\sin(\\sqrt{\\frac{k}{m}}t) & \\cos(\\sqrt{\\frac{k}{m}}t) \\end{pmatrix} \\begin{pmatrix} c_1 \\\\ c_2 \\end{pmatrix} = \\begin{pmatrix} \\cos(\\sqrt{\\frac{k}{m}}t) & \\sin(\\sqrt{\\frac{k}{m}}t) \\\\ -\\sin(\\sqrt{\\frac{k}{m}}t) & \\cos(\\sqrt{\\frac{k}{m}}t) \\end{pmatrix} \\begin{pmatrix} p(0) \\\\ v(0) \\end{pmatrix}\n",
-    "\\end{align*}\n",
-    "\n",
-    "where $x(0) = \\begin{pmatrix} c_1 \\\\ c_2 \\end{pmatrix} = \\begin{pmatrix} p(0) \\\\ v(0) \\end{pmatrix}$. Thus we see that a single mass connected to a fixed support by a spring oscillates with frequency $\\sqrt{\\frac{k}{m}}$ in the absence of external forces like friction or damping.\n",
-    "\n",
-    "Note: we could also have computed $x(t) = e^{At}x(0)$ by directly computing the matrix exponential from the power series definition (MRS).\n",
-    "\n",
-    "Next, we modify our problem to make it a bit more realistic to add friction, which is proportional to $\\dot{p}$. Newton's law then becomes:\n",
-    "\n",
-    "\\[\n",
-    "m\\ddot{p} + b\\dot{p} + kp = 0.\n",
-    "\\]\n",
-    "\n",
-    "Defining $x = (p,\\dot{p})$ as before, our first order reformulation becomes:\n",
-    "\n",
-    "\\[\n",
-    "\\dot{x} = \\begin{pmatrix} 0 & 1 \\\\ -\\frac{k}{m} & -\\frac{b}{m} \\end{pmatrix} \\begin{pmatrix} p \\\\ \\dot{p} \\end{pmatrix} = Ax.\n",
-    "\\]"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The eigenvalues of $A$ are the solutions to the characteristic equation:\n",
-    "\n",
-    "\\[\n",
-    "m\\lambda^2 + b\\lambda + k = 0. \\tag{*}\n",
-    "\\]\n",
-    "\n",
-    "There are three possible cases:\n",
-    "\n",
-    "Overdamped: If $b > 2\\sqrt{mk}$ then the equation (*) has two negative real roots\n",
-    "\n",
-    "\\[\n",
-    "\\lambda_{\\pm} = -\\frac{b \\pm \\sqrt{b^2 - 4mk}}{2m},\n",
-    "\\]\n",
-    "\n",
-    "and thus the solution is given by a linear combination of two decaying exponentials\n",
-    "\n",
-    "\\[\n",
-    "x(t) = c_1 e^{\\lambda_+ t} v_+ + c_2 e^{\\lambda_- t} v_-,\n",
-    "\\]\n",
-    "\n",
-    "for $v_{\\pm}$ the corresponding real eigenvectors of $\\lambda_{\\pm}$. Such a system has so much friction that it no longer oscillates!\n",
-    "\n",
-    "Underdamped: If $0 < b < 2\\sqrt{mk}$, then (*) has two complex-conjugate roots:\n",
-    "\n",
-    "\\[\n",
-    "\\lambda_{\\pm} = -\\frac{b}{2m} \\pm i\\frac{\\sqrt{4mk-b^2}}{2m} =: -\\mu \\pm ir.\n",
-    "\\]\n",
-    "\n",
-    "With a little bit of effort, we can compute the matrix exponential here as\n",
-    "\n",
-    "\\[\n",
-    "e^{At} = e^{-\\mu t} \\begin{bmatrix} \\cos rt & \\sin rt \\\\ -\\sin rt & \\cos rt \\end{bmatrix}\n",
-    "\\]\n",
-    "\n",
-    "so that $x(t) = e^{At} \\begin{bmatrix} p(0) \\\\ \\dot{p}(0) \\end{bmatrix}$. In contrast to the undamped\n",
-    "\n",
-    "setting, we see here that oscillations continue at fixed frequency $r = \\sqrt{\\frac{k}{m} - \\frac{b^2}{4m^2}}$,\n",
-    "\n",
-    "while the entire trajectory also decays exponentially at rate $\\mu = \\frac{b}{2m}$. Thus\n",
-    "\n",
-    "for small friction, we eventually stop moving, but continue to oscillate as we\n",
-    "\n",
-    "go to the origin.\n",
-    "\n",
-    "Critically damped: The borderline case occurs when $b = b_c = 2\\sqrt{mk}$, in which case\n",
-    "our matrix $A$ has one eigenvalue $\\lambda = -\\frac{b}{2m}$, and is similar to the Jordan block\n",
-    "\n",
-    "\\[\n",
-    "J_2 = \\begin{bmatrix} -\\frac{b}{2m} & 1 \\\\ 0 & -\\frac{b}{2m} \\end{bmatrix}\n",
-    "\\]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Using the techniques we saw last class, we compute the matrix exponential\n",
-    "\n",
-    "\\[\n",
-    "e^{At} = \\begin{bmatrix}\n",
-    "e^{\\lambda t} & te^{\\lambda t} \\\\\n",
-    "\\lambda e^{\\lambda t} & e^{\\lambda t} + \\lambda te^{\\lambda t}\n",
-    "\\end{bmatrix} \\quad \\text{(please double check!)}\n",
-    "\\]\n",
-    "\n",
-    "and thus our solution is\n",
-    "\n",
-    "\\[\n",
-    "\\begin{bmatrix}\n",
-    "p(t) \\\\\n",
-    "\\dot{p}(t)\n",
-    "\\end{bmatrix} = e^{At} \\begin{bmatrix}\n",
-    "p(0) \\\\\n",
-    "\\dot{p}(0)\n",
-    "\\end{bmatrix} = e^{\\lambda t} \\left(\n",
-    "\\begin{bmatrix}\n",
-    "1 \\\\\n",
-    "\\lambda\n",
-    "\\end{bmatrix} p(0) + \n",
-    "\\begin{bmatrix}\n",
-    "t \\\\\n",
-    "1 + \\lambda t\n",
-    "\\end{bmatrix} \\dot{p}(0)\n",
-    "\\right).\n",
-    "\\]\n",
-    "\n",
-    "Even though the formula looks quite different, the qualitative behavior is very similar to the overdamped case, as when $t \\to \\infty$, the exponential decay $e^{-\\frac{b}{2m}t}$ governs the system's behavior. This corresponds to a non-vibrating solution with the slowest possible decay rate -- any further reduction in $b$ will allow for a damped slowly oscillatory vibration to appear."
+    "Thus the stable subspace is spanned by $\\vv v_2$ and $\\vv v_3$, whose nonzero solutions tend to $\\vv 0$ as $t \\to \\infty$ (exponentially quickly); the center subspace is the line spanned by $\\vv v_1$, all of whose solutions are constant. In this case, no eigenvalues are positive and hence the unstable subspace is trivial: $U = \\{\\vv 0\\}$.\n",
+    ":::\n",
+    "\n"
    ]
   },
   {
