--- a/07_Ch_8_Iteration/091-Linear_Iterative_Systems.ipynb
+++ b/07_Ch_8_Iteration/091-Linear_Iterative_Systems.ipynb
@@ -147,6 +147,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\\section*{Study the specific solution:}\n",
+    "\n",
+    "\\[\n",
+    "\\begin{bmatrix}\n",
+    "x(k) \\\\\n",
+    "y(k)\n",
+    "\\end{bmatrix} = \n",
+    "\\frac{a_1 + a_2(.8)^k}{2} \n",
+    "\\begin{bmatrix}\n",
+    "1 \\\\\n",
+    "1\n",
+    "\\end{bmatrix} + \n",
+    "\\frac{a_2 - a_1(.1)^k}{2}\n",
+    "\\begin{bmatrix}\n",
+    "1 \\\\\n",
+    "-1\n",
+    "\\end{bmatrix}\n",
+    "\\]\n",
+    "\n",
+    "We conclude that $x(k) \\to 0$ as $k \\to \\infty$, and that the slowest decaying direction is $v_1 = \\begin{bmatrix} 1 \\\\ 1 \\end{bmatrix}$, which decays at rate .8 (by 80\\%) per time step.\n",
+    "\n",
+    "\\begin{figure}[h]\n",
+    "\\centering\n",
+    "\\caption{Figure 9.2. Stable Iterative System.}\n",
+    "\\end{figure}\n",
+    "\n",
+    "Sampled initial conditions \\\\\n",
+    "along unit circle (orange) \\\\\n",
+    "$k=0$, $k=1$, $k=3$, $k=5$, $k=10$, $k=15$ \\\\\n",
+    "(cyan, blue, purple, red) \\\\\n",
+    "(-) $k=2$ $k=3$ $k=4$\n",
+    "\n",
+    "\\textbf{ONLINE NOTES:} Please include Example 9.7 and show how to obtain final solutions.\n",
+    "\n",
+    "\\section*{Diagonalization and Iteration}\n",
+    "\n",
+    "An alternative and equally efficient approach to solving (9.10) in the case of complex matrices is based on the diagonalization of T. We start with the following observation (which we also saw when computing the matrix exponential). Let $V = [v_1 \\cdots v_n]$ be an eigenbasis for T, and $\\Lambda = \\text{diag}(\\lambda_1, \\ldots, \\lambda_n)$ the diagonal matrix of the eigenvalues of T. Then:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "T &= V \\Lambda V^{-1} \\\\\n",
+    "T^2 &= V \\Lambda V^{-1} V \\Lambda V^{-1} = V \\Lambda^2 V^{-1} \\\\\n",
+    "T^3 &= T(T^2) = V \\Lambda V^{-1} V \\Lambda^2 V^{-1} = V \\Lambda^3 V^{-1}\n",
+    "\\end{align*}\n",
+    "\n",
+    "and in general, $T^k = V \\Lambda^k V^{-1}$. Therefore, the solution to $x(k+1) = Tx(k)$, with $x(0) = a$ is\n",
+    "\n",
+    "\\[ x(k) = T^k a = V \\Lambda^k V^{-1} a. \\]\n",
+    "\n",
+    "If we define $c = V^{-1} a$, then we recover $x(k) = c_1 \\lambda_1^k v_1 + \\cdots + c_n \\lambda_n^k v_n$.\n",
+    "\n",
+    "\\textbf{ONLINE NOTES:} Please include Example 9.8."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/07_Ch_8_Iteration/091-Linear_Iterative_Systems.ipynb)"
    ]
   },
