--- a/06_Ch_7_Dynamics/086-App_Mech_Sys.ipynb
+++ b/06_Ch_7_Dynamics/086-App_Mech_Sys.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "## Reading\n",
     "\n",
-    "Material related to this page, as well as additional exercises, can be found in ALA 10.4 and ALA 10.6.\n",
+    "Material related to this page, as well as additional exercises, can be found in ALA 10.6.\n",
     "\n",
     "## Learning Objectives\n",
     "\n",
