dumped content of lec 15

--- a/07_Ch_8_Iteration/092-Markov_Chains.ipynb
+++ b/07_Ch_8_Iteration/092-Markov_Chains.ipynb
@@ -192,6 +192,198 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "In the long run, we expect when converge to the steady state distribution $\\pi^*$ satisfying $\\pi^* = P\\pi^*$, which we obtain by solving:\n",
+    "\n",
+    "\\[(P - I)\\pi = 0\\]\n",
+    "\n",
+    "and setting $\\pi^* = \\frac{\\pi}{\\sum \\pi}$. In this case, this works out to:\n",
+    "\n",
+    "\\[\\pi^* \\approx \\begin{bmatrix} 0.521 \\\\ 0.336 \\\\ 0.143 \\end{bmatrix}\\]\n",
+    "\n",
+    "which informs that assuming voter patterns do not change, 52.1\\% of voters will go to D, 33.6\\% to R, and 14.3\\% to I in this precinct.\n",
+    "\n",
+    "\\textbf{Random Walks, Page Rank, and the Google Matrix}\n",
+    "\n",
+    "An internet user's behavior while surfing the web can be modeled as a Markov chain that captures a random walk on a graph. We start with a simple example of this, and then explain how it can be used to design a search engine.\n",
+    "\n",
+    "Consider the following graph:\n",
+    "\n",
+    "\\begin{center}\n",
+    "\\includegraphics[scale=0.5]{figure4}\n",
+    "\\end{center}\n",
+    "\n",
+    "Which has seven vertices interconnected by edges. Let's pretend this graph models a very simple internet: each vertex (or node) is a webpage and each edge is a hyperlink connecting page to each other. (For now we assume that if page i links to page j, then page j also links to page i, but this isn't necessary.) We assume that if a user is on page i, they will click on one of the hyperlinks uniformly at random. For example, if a user is on page 5, they will visit page 3 next 50\\% of the time and page 6 next 50\\% of the time. Similarly, if a user is on page 3, they will visit page 1, 2, or 4 next 33\\% of the time each.\n",
+    "\n",
+    "We can model this user behavior using a Markov chain, which is called a simple random walk on a graph. The transition matrix for this graph is given by:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\[\n",
+    "P = \\begin{bmatrix}\n",
+    "0 & 1/3 & 1/4 & 0 & 0 & 0 & 0 \\\\\n",
+    "1/2 & 0 & 1/4 & 1 & 1/2 & 0 & 0 \\\\\n",
+    "1/2 & 1/3 & 0 & 0 & 0 & 1/3 & 0 \\\\\n",
+    "0 & 0 & 1/4 & 0 & 0 & 0 & 0 \\\\\n",
+    "0 & 1/3 & 0 & 0 & 0 & 1/3 & 0 \\\\\n",
+    "0 & 0 & 1/4 & 0 & 1/2 & 0 & 1 \\\\\n",
+    "0 & 0 & 0 & 0 & 0 & 1/3 & 0\n",
+    "\\end{bmatrix}\n",
+    "\\]\n",
+    "\n",
+    "This allows us to answer questions such as the following: suppose 100 users start on page 6. After each user clicks on three hyperlinks, what \\% of users do we expect to find on each new page. The solution is given by setting our initial user distribution to:\n",
+    "\n",
+    "\\[\n",
+    "x(0) = \\begin{bmatrix}\n",
+    "0 \\\\ 0 \\\\ 0 \\\\ 0 \\\\ 0 \\\\ 1 \\\\ 0\n",
+    "\\end{bmatrix}\n",
+    "\\]\n",
+    "\n",
+    "and computing $x(3) = P^3x(0) = \\begin{bmatrix}\n",
+    ".0833 \\\\ .0417 \\\\ .4028 \\\\ 0 \\\\ .2778 \\\\ 0 \\\\ .1944\n",
+    "\\end{bmatrix}$\n",
+    "\n",
+    "This tells, for example, that 40.28\\% of users starting on page 6 end up on page 3 after 3 hyperlink clicks.\n",
+    "\n",
+    "\\textbf{PageRank}\n",
+    "\n",
+    "The founders of Google, Sergey Brin and Lawrence Page, reasoned that important pages had links coming from other \"important\" pages, and thus, a typical internet user would spend more time on more important pages, and less time on less important pages. This can be captured by the steady state distribution $\\pi^*$ of the Markov chain we described above. Using this model, we can say that a typical user will spend $\\pi^*_i$ \\% of their time on page $i$. This is precisely the observation used to define the PageRank algorithm, which Google uses to rank the importance of the webpages it catalogs.\n",
+    "\n",
+    "\\textbf{Key Idea:} The importance of a webpage $i$ can be measured by the corresponding entry $\\pi^*_i$ of the steady state vector $\\pi^*$ of the Markov chain describing the behavior of a typical internet user."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, if a typical transition matrix $P$ describing the internet were regular, we would be done - we simply compute $\\pi^* = P\\pi^*$ and use $\\pi^*$ to rank webpages. Unfortunately, typical models of the web are directed graphs, which lead to non-regular transition matrices $P$. To address this, Google makes two adjustments, which we illustrate with the following slight modification of our previous example:\n",
+    "\n",
+    "\\begin{figure}[h]\n",
+    "\\centering\n",
+    "\\includegraphics[width=0.3\\textwidth]{figure1}\n",
+    "\\caption{A seven-page Web}\n",
+    "\\end{figure}\n",
+    "\n",
+    "\\[\n",
+    "P = \\begin{bmatrix}\n",
+    "0 & 1/2 & 0 & 0 & 0 & 0 & 0 \\\\\n",
+    "0 & 0 & 1/3 & 0 & 1/2 & 0 & 0 \\\\\n",
+    "1 & 0 & 0 & 0 & 0 & 1/3 & 0 \\\\\n",
+    "0 & 0 & 1/3 & 1 & 0 & 0 & 0 \\\\\n",
+    "0 & 1/2 & 0 & 0 & 0 & 1/3 & 0 \\\\\n",
+    "0 & 0 & 1/3 & 0 & 1/2 & 0 & 0 \\\\\n",
+    "0 & 0 & 0 & 0 & 0 & 1/3 & 1\n",
+    "\\end{bmatrix}\n",
+    "\\]\n",
+    "\n",
+    "The first issue that arises here is that pages 4 and 7 are dangling nodes: if a user ever ends up on page 4 or 7, they never leave as there are no outgoing links. This means that columns 4 and 7 never change as we compute $P^k$, and hence $P$ cannot be regular. To handle dangling nodes, the following adjustment is made:\n",
+    "\n",
+    "\\textbf{Adjustment 1:} If an internet user reaches a dangling node, they will pick any page on the web with equal probability and move to that page.\n",
+    "\n",
+    "This means that if state $j$ is an absorbing state, we replace column $j$ of $P$ with the vector $(1/n, ..., 1/n)$. For example, our modified transition matrix is now:\n",
+    "\n",
+    "\\[\n",
+    "P_* = \\begin{bmatrix}\n",
+    "0 & 1/2 & 0 & 1/7 & 0 & 0 & 1/7 \\\\\n",
+    "0 & 0 & 1/3 & 1/7 & 1/2 & 0 & 1/7 \\\\\n",
+    "1 & 0 & 0 & 1/7 & 0 & 1/3 & 1/7 \\\\\n",
+    "0 & 0 & 1/3 & 1/7 & 0 & 0 & 1/7 \\\\\n",
+    "0 & 1/2 & 0 & 1/7 & 0 & 1/3 & 1/7 \\\\\n",
+    "0 & 0 & 1/3 & 1/7 & 1/2 & 0 & 1/7 \\\\\n",
+    "0 & 0 & 0 & 1/7 & 0 & 1/3 & 1/7\n",
+    "\\end{bmatrix}\n",
+    "\\]\n",
+    "\n",
+    "While this helps eliminate dangling nodes, we may still not have a regular transition matrix, as there might still be cycles of pages. For example, if page $i$ only links to page $j$, and page $j$ only links to page $i$, a user entering either page is condemned to moving back and forth between the two pages. This means the corresponding columns of $P_*^k$ will always have zeros in them, and hence $P_*$ would not be regular."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\\textbf{Adjustment 2:} Pick a number $p$ between 0 and 1. If a user is on page $i$, then $p$ proportion of the time they will pick from all possible hyperlinks on that page with equal probability and move to that page. The other $1-p$ fraction of the time, they will pick any page on the web with equal probability and move to that page.\n",
+    "\n",
+    "In terms of the modified transition matrix $P_*$, the new transition matrix will be\n",
+    "\n",
+    "\\[G = pP_* + (1-p)E,\\]\n",
+    "\n",
+    "where $E \\in \\mathbb{R}^{n \\times n}$ and $E_{ij} = 1/n$ for $i,j=1,...,n$. The matrix $G$ is called the Google matrix. $G$ is easily seen to be regular, as all entries of $G$ are positive.\n",
+    "\n",
+    "Although any value of $p$ is valid, Google is thought to use $p \\approx 0.85$. For our example, the Google matrix is\n",
+    "\n",
+    "\\[\n",
+    "G = .85\\begin{bmatrix}\n",
+    "0 & 1/2 & 0 & 1/7 & 0 & 0 & 1/7 \\\\\n",
+    "0 & 0 & 1/3 & 1/7 & 1/2 & 0 & 1/7 \\\\\n",
+    "1 & 0 & 0 & 1/7 & 0 & 1/3 & 1/7 \\\\\n",
+    "0 & 0 & 1/3 & 1/7 & 0 & 0 & 1/7 \\\\\n",
+    "0 & 1/2 & 0 & 1/7 & 0 & 1/3 & 1/7 \\\\\n",
+    "0 & 0 & 1/3 & 1/7 & 1/2 & 0 & 1/7 \\\\\n",
+    "0 & 0 & 0 & 1/7 & 0 & 1/3 & 1/7\n",
+    "\\end{bmatrix}\n",
+    "\\]\n",
+    "\n",
+    "\\[\n",
+    "+ .15\\begin{bmatrix}\n",
+    "1/7 & 1/7 & 1/7 & 1/7 & 1/7 & 1/7 & 1/7 \\\\\n",
+    "1/7 & 1/7 & 1/7 & 1/7 & 1/7 & 1/7 & 1/7 \\\\\n",
+    "1/7 & 1/7 & 1/7 & 1/7 & 1/7 & 1/7 & 1/7 \\\\\n",
+    "1/7 & 1/7 & 1/7 & 1/7 & 1/7 & 1/7 & 1/7 \\\\\n",
+    "1/7 & 1/7 & 1/7 & 1/7 & 1/7 & 1/7 & 1/7 \\\\\n",
+    "1/7 & 1/7 & 1/7 & 1/7 & 1/7 & 1/7 & 1/7 \\\\\n",
+    "1/7 & 1/7 & 1/7 & 1/7 & 1/7 & 1/7 & 1/7\n",
+    "\\end{bmatrix}\n",
+    "\\]\n",
+    "\n",
+    "\\[\n",
+    "= \\begin{bmatrix}\n",
+    ".021429 & .446429 & .021429 & .142857 & .021429 & .021429 & .142857 \\\\\n",
+    ".021429 & .021429 & .304762 & .142857 & .446429 & .021429 & .142857 \\\\\n",
+    ".871429 & .021429 & .021429 & .142857 & .021429 & .304762 & .142857 \\\\\n",
+    ".021429 & .021429 & .304762 & .142857 & .021429 & .021429 & .142857 \\\\\n",
+    ".021429 & .446429 & .021429 & .142857 & .021429 & .304762 & .142857 \\\\\n",
+    ".021429 & .021429 & .304762 & .142857 & .446429 & .021429 & .142857 \\\\\n",
+    ".021429 & .021429 & .021429 & .142857 & .021429 & .304762 & .142857\n",
+    "\\end{bmatrix}\n",
+    "\\]\n",
+    "\n",
+    "We can now compute the steady state vector $\\pi^* = G\\pi^*$, which is found to be:\n",
+    "\n",
+    "\\[\n",
+    "\\pi^* = \\begin{bmatrix}\n",
+    ".116293 \\\\\n",
+    ".168567 \\\\\n",
+    ".191263 \\\\\n",
+    ".098844 \\\\\n",
+    ".164054 \\\\\n",
+    ".168567 \\\\\n",
+    ".092413\n",
+    "\\end{bmatrix}\n",
+    "\\]\n",
+    "\n",
+    "Thus, we can rank the pages in terms of descending importance as: 3, 2, 6, 5, 1, 4, 7."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ":::{note}\n",
+    "The Google matrix for the world wide web has over 8 billion rows and columns, and computing $\\vv x^* = G \\vv x^*$ is a very non-trivial task. An iterative approach known as the power method is used in practice, and typically takes several days for Google to compute a new $\\vv x^*$, which it does every month. \n",
+    "\n",
+    "**TO DO**: accessible links to power method description\n",
+    ":::"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
