added python for 071 and 072

--- a/05_Ch_6_Eigenvalues_and_Eigenvectors/072-determinants.ipynb
+++ b/05_Ch_6_Eigenvalues_and_Eigenvectors/072-determinants.ipynb
@@ -310,7 +310,192 @@
     "\\end{align*}\n",
     "\n",
     "Note that $\\det L$ and $\\det U$ are easy to compute, just take the products of their diagonal elements. Furthemore, it is easy to compute the determinant of $P$, a permutation matrix, is significantly easier than with the Laplace expansion than for a general matrix (since most of the entries of $P$ are zeros).\n",
-    ":::"
+    ":::\n",
+    "\n",
+    "#### Python Break!\n",
+    "\n",
+    "Below are 3 code snippets demonstrating a few ways to compute the determinant. First, we run an implementation of the Laplace expansion (taken from [this article](#https://en.wikipedia.org/wiki/Laplace_expansion#Computational_expense)). Second, we implement a determinant function based on the PLU factorization. Finally, we show how to use the built in determinant function from the `scipy.linalg` library."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Determinant (for 9x9): -0.007502281817950991\n",
+      "Elapsed time (for 9x9): 4.375511169433594 seconds\n",
+      "Determinant (for 10x10): -0.0334246928386742\n",
+      "Elapsed time (for 10x10): 40.4918212890625 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from scipy import linalg\n",
+    "import time\n",
+    "\n",
+    "np.random.seed(2030)\n",
+    "\n",
+    "# This code is from https://en.wikipedia.org/wiki/Laplace_expansion#Computational_expense\n",
+    "def laplace_det(M):\n",
+    "    # Base case of recursive function: 1x1 matrix\n",
+    "    if M.shape[0] == 1: \n",
+    "        return M[0, 0]\n",
+    "\n",
+    "    total = 0\n",
+    "    for column, element in enumerate(M[0]):\n",
+    "        # Exclude first row and current column.\n",
+    "        K = np.stack([np.concatenate((x[:column], x[column + 1 :]), axis=0) for x in M[1:]], axis=1)\n",
+    "        s = 1 if column % 2 == 0 else -1 \n",
+    "        total += s * element * laplace_det(K)\n",
+    "    return total\n",
+    "\n",
+    "# Generate a random matrix\n",
+    "A = np.random.rand(9, 9) \n",
+    "B = np.random.rand(10, 10)\n",
+    "\n",
+    "# Find the determinant of A and B using Laplace expansion; also time how long it takes\n",
+    "start_time_A = time.time()\n",
+    "det_A = laplace_det(A)\n",
+    "end_time_A = time.time()\n",
+    "\n",
+    "start_time_B = time.time()\n",
+    "det_B = laplace_det(B)\n",
+    "end_time_B = time.time()\n",
+    "\n",
+    "print(f\"Determinant (for 9x9): {det_A}\")\n",
+    "print(f\"Elapsed time (for 9x9): {end_time_A - start_time_A} seconds\")\n",
+    "print(f\"Determinant (for 10x10): {det_B}\")\n",
+    "print(f\"Elapsed time (for 10x10): {end_time_B - start_time_B} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Above is a recursive implementation of the Laplace expansion. As you can see, this implementation isn't very fast! On this specific machine, it took ~4s to find the determinant for a $9\\times 9$ matrix; and ~40s to find the determinant for a $10\\times 10$ matrix! \n",
+    "\n",
+    "For anything longer, this implementation will take forever to finish. Luckily, using our linear algebra knowledge, we can give a much more efficient implementation of the determinant!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Determinant (for 9x9): -0.007502281817951028\n",
+      "Elapsed time (for 9x9): 0.0 seconds\n",
+      "Determinant (for 10x10): -0.033424692838674074\n",
+      "Elapsed time (for 10x10): 0.0 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from scipy import linalg\n",
+    "import time\n",
+    "\n",
+    "np.random.seed(2030)\n",
+    "\n",
+    "def sign(P):\n",
+    "    sign = 1\n",
+    "    visited = [0 for _ in range(len(P))]\n",
+    "    for i in range(len(P)):\n",
+    "        if visited[i] == 1:\n",
+    "            continue\n",
+    "        if P[i] == i:\n",
+    "            continue\n",
+    "        curr = P[i]\n",
+    "        visited[curr] = 1\n",
+    "        cycle_length = 1\n",
+    "        while curr != i:\n",
+    "            curr = P[curr]\n",
+    "            visited[curr] = 1\n",
+    "            cycle_length += 1\n",
+    "        if cycle_length % 2 == 0:\n",
+    "            sign = -sign\n",
+    "    return sign\n",
+    "\n",
+    "def plu_det(M):\n",
+    "    P, L, U = linalg.lu(M, p_indices=True)\n",
+    "    return sign(P) * np.prod(np.diag(L)) * np.prod(np.diag(U))\n",
+    "\n",
+    "# Generate a random matrix\n",
+    "A = np.random.rand(9, 9) \n",
+    "B = np.random.rand(10, 10)\n",
+    "\n",
+    "# Find the determinant of A and B using Laplace expansion; also time how long it takes\n",
+    "start_time_A = time.time()\n",
+    "det_A = plu_det(A)\n",
+    "end_time_A = time.time()\n",
+    "\n",
+    "start_time_B = time.time()\n",
+    "det_B = plu_det(B)\n",
+    "end_time_B = time.time()\n",
+    "\n",
+    "print(f\"Determinant (for 9x9): {det_A}\")\n",
+    "print(f\"Elapsed time (for 9x9): {end_time_A - start_time_A} seconds\")\n",
+    "print(f\"Determinant (for 10x10): {det_B}\")\n",
+    "print(f\"Elapsed time (for 10x10): {end_time_B - start_time_B} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As you can see, with the PLU method, this method is much quicker; as you can see, for smaller matrices it was near instantaneous. A few notes; to find the PLU decomposition of $A$, we used the `scipy.linalg.lu` function, which returns the $L$ and $U$ matrices, as well as either the $P$ matrix or its [representation in one-line notation](#https://en.wikipedia.org/wiki/Permutation#One-line_notation) (this is because permutation matrices are mostly zeros, and can be encoded as just a list of numbers). Also, note the `sign` function we defined; the details aren't important, but this function is essentially a fast way to compute the determinant of a permutation matrix given in one-line notation.\n",
+    "\n",
+    "Finally, let's see how to use the built in functions from `scipy.linalg` (or `numpy.linalg`) to find determinants!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Determinant (for 9x9): -0.007502281817951028\n",
+      "Elapsed time (for 9x9): 0.0 seconds\n",
+      "Determinant (for 10x10): -0.033424692838674094\n",
+      "Elapsed time (for 10x10): 0.0 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from scipy import linalg\n",
+    "import time\n",
+    "\n",
+    "np.random.seed(2030)\n",
+    "\n",
+    "# Generate a random matrix\n",
+    "A = np.random.rand(9, 9) \n",
+    "B = np.random.rand(10, 10)\n",
+    "\n",
+    "# Find the determinant of A and B using Laplace expansion; also time how long it takes\n",
+    "start_time_A = time.time()\n",
+    "det_A = linalg.det(A)\n",
+    "end_time_A = time.time()\n",
+    "\n",
+    "start_time_B = time.time()\n",
+    "det_B = linalg.det(B)\n",
+    "end_time_B = time.time()\n",
+    "\n",
+    "print(f\"Determinant (for 9x9): {det_A}\")\n",
+    "print(f\"Elapsed time (for 9x9): {end_time_A - start_time_A} seconds\")\n",
+    "print(f\"Determinant (for 10x10): {det_B}\")\n",
+    "print(f\"Elapsed time (for 10x10): {end_time_B - start_time_B} seconds\")"
    ]
   },
   {
@@ -318,6 +503,13 @@
    "metadata": {},
    "source": [
     "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/03_Orthogonality/053-orthogonal_matrices.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As you can see, it's really easy, just a single call to the `scipy.linalg.det` function!"
    ]
   }
  ],
@@ -337,7 +529,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
