--- a/05_Ch_6_Eigenvalues_and_Eigenvectors/071-eigenvalues_eigenvectors.ipynb
+++ b/05_Ch_6_Eigenvalues_and_Eigenvectors/071-eigenvalues_eigenvectors.ipynb
@@ -80,7 +80,7 @@
     "````{exercise}  Finding eigenvectors\n",
     ":label: eigen-ex1\n",
     "\n",
-    "Given that $\\lambda = 3$ is an eigenvalue of $\\bm -1 & -1 & 1 \\\\ -4 & -1 & -2 \\\\ 0 & 0 & -3 \\em$, find its corresponding eigenvectors.\n",
+    "Given that $\\lambda = -3$ is an eigenvalue of $\\bm -1 & -1 & 1 \\\\ -4 & -1 & -2 \\\\ 0 & 0 & -3 \\em$, find its corresponding eigenvectors.\n",
     "\n",
     "```{solution} eigen-ex1\n",
     ":class: dropdown\n",
@@ -101,7 +101,7 @@
     "    \\end{array}\\right]\n",
     "\\end{align*}\n",
     "\n",
-    "which has solution set given by (and hence the eigenvectors corresponding to an eigenvalue of $3$ are given by):\n",
+    "which has solution set given by (and hence the eigenvectors corresponding to an eigenvalue of $-3$ are given by):\n",
     "\n",
     "\\begin{align*}\n",
     "    \\text{span}\\left\\{ \\bm 1/2\\\\1\\\\0\\em, \\bm -1/2\\\\0\\\\1 \\em \\right\\}.\n",
@@ -109,6 +109,49 @@
     "\n",
     "```\n",
     "````\n",
+    "\n",
+    "#### Python Break!\n",
+    "\n",
+    "Below is a code snippet demonstrating how to solve for the eigenvectors of a known eigenvalue. We aren't introducing anything new, we are just applying the concepts we have covered in the previous few chapters!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eigenvectors corresponding to lambda_1 = -3:\n",
+      "[[ 0.57735027  0.        ]\n",
+      " [ 0.57735027  0.70710678]\n",
+      " [-0.57735027  0.70710678]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np \n",
+    "from scipy import linalg\n",
+    "\n",
+    "A = np.array([\n",
+    "    [-1, -1, 1],\n",
+    "    [-4, -1, -2],\n",
+    "    [0, 0, -3]\n",
+    "])\n",
+    "\n",
+    "lambda_1 = -3        # we are given that -3 is an eigenvalue of A\n",
+    "\n",
+    "print('Eigenvectors corresponding to lambda_1 = -3:')\n",
+    "print(linalg.null_space(A - (-3) * np.identity(3)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here, the `null_space` function from the `scipy.linalg` library returns a matrix whose columns form an orthonormal basis of a given matrix $A$. To solve for the eigenvectors corresponding to $\\lambda_1 = -3$, use the `null_space` function to solve for the nullspace of $A - (-3)I$. \n",
     "\n",
     "## ... But how do we find the eigenvalues?\n",
     "\n",
@@ -149,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
